; ModuleID = '/home/carl/AnghaBench/darwin-xnu/osfmk/vm/extr_vm_map_store.c_vm_map_store_has_RB_support.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/osfmk/vm/extr_vm_map_store.c_vm_map_store_has_RB_support.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vm_map_header = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64 }

@SKIP_RB_TREE = common dso_local global i64 0, align 8
@FALSE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @vm_map_store_has_RB_support(%struct.vm_map_header* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.vm_map_header*, align 8
  store %struct.vm_map_header* %0, %struct.vm_map_header** %3, align 8
  %4 = load %struct.vm_map_header*, %struct.vm_map_header** %3, align 8
  %5 = getelementptr inbounds %struct.vm_map_header, %struct.vm_map_header* %4, i32 0, i32 0
  %6 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = inttoptr i64 %7 to i8*
  %9 = load i64, i64* @SKIP_RB_TREE, align 8
  %10 = trunc i64 %9 to i32
  %11 = sext i32 %10 to i64
  %12 = inttoptr i64 %11 to i8*
  %13 = icmp eq i8* %8, %12
  br i1 %13, label %14, label %16

14:                                               ; preds = %1
  %15 = load i32, i32* @FALSE, align 4
  store i32 %15, i32* %2, align 4
  br label %18

16:                                               ; preds = %1
  %17 = load i32, i32* @TRUE, align 4
  store i32 %17, i32* %2, align 4
  br label %18

18:                                               ; preds = %16, %14
  %19 = load i32, i32* %2, align 4
  ret i32 %19
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
